//Rename the class when we make series to MediaCategory
public enum MovieCategory {

    CRIME,
    DRAMA,
    ADVENTURE,
    BIOGRAPHY,
    HISTORY,
    SPORT,
    WAR,
    ROMANCE,
    MYSTERY,
    FANTASY,
    THRILLER,
    HORROR,
    MUSICAL,
    FAMILY,
    ACTION,
    WESTERN,
    COMEDY,
    MUSIC,
    FILM_NOIR,
    SCI_FI,
}