public class TextUI
{
    //Use this class to communicate with the user in the future!
}