@startuml


class Main
class StartMenu
class User
abstract Media
class Movies
class Series
class FileIO
class Collection
class SearchBar
enum MovieCategory
class TextUI

Main : + static void main()
Main : + StartMenu startMenu;
Main : + FileIO fileIO;

StartMenu : # Scanner scanner;
StartMenu : ArrayList<User> user;
StartMenu : + void clearTheConsole()
StartMenu : + void startStreaming()
StartMenu : + boolean checkUser()
StartMenu : - void register()

User : + String userName;
User : + int userPass;
User : + User()
User : + String getUserName()
User : + void setUserName()
User : + int getUserPass()
User : + void setUserPass()
User : + String toString()
User : + static void pickMedia()
User : + static String checkMovieSearch()

Media : - ArrayList<String> category;
Media : - String name;
Media : - String year;
Media : - double rating;
Media : + String getName()
Media : + Media()
Media : + String toString()

Movies : + Movies()
Movies : + String toString()

Series : + Series()

FileIO : # final Scanner scanner;
FileIO : ArrayList<Media> movies;
FileIO : + ArrayList<Media> readMovieData()
FileIO : + void chooseMovie()
FileIO : + String choseResults()
FileIO : + void youHaveChosenMovie()
FileIO : + void movieOption()

Collection : + static ArrayList<Media> movies;
Collection : + static ArrayList<Media> series;

SearchBar : + ArrayList<Media> Search()
SearchBar : + ArrayList<Media> FetchSearchResults()

Main *-- StartMenu : has-a
StartMenu *-- User
StartMenu *-- Media
StartMenu *-- SearchBar
StartMenu *-- FileIO
Media <|-- Movies : is-a
Media <|-- Series : is-a
Media *-- FileIO
Media *-- Collection
Media *-- MovieCategory
User *-- Media

!pragma layout smetana
@enduml